[441483] Integrate the test plug-ins into the build
Bug: 441483
Change-Id: I6fcbf8c9e36f02692454ec117f9ae11d867e0ffb
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>